Some of the mock values were doomed to fail if precision was handled correctly.